i18n(es): Update of `error-reference.mdx` and removed identical paragraph from `rss.mdx` (#2448)
* updates

* Update src/pages/es/reference/error-reference.mdx

Co-authored-by: Kevin Zuniga Cuellar <46791833+kevinzunigacuellar@users.noreply.github.com>

--- a/src/pages/es/reference/error-reference.mdx
+++ b/src/pages/es/reference/error-reference.mdx
@@ -48,3 +48,13 @@ La siguiente referencia es una lista completa de los errores que puedes encontra
 - [**MdxIntegrationMissingError**](/es/reference/errors/mdx-integration-missing-error/) (E06004)<br/>MDX integration missing.
 - [**ConfigNotFound**](/es/reference/errors/config-not-found/) (E07001)<br/>Specified configuration file not found.
 - [**ConfigLegacyKey**](/es/reference/errors/config-legacy-key/) (E07002)<br/>Legacy configuration detected.
+
+## Errores de CLI
+
+- [**GenerateContentTypesError**](/es/reference/errors/generate-content-types-error/) (E08001)<br/>Failed to generate content types.
+
+## Errores de Colección de Contenido
+
+- [**InvalidContentEntryFrontmatterError**](/es/reference/errors/invalid-content-entry-frontmatter-error/) (E09001)<br/>Content entry frontmatter does not match schema.
+- [**InvalidContentEntrySlugError**](/es/reference/errors/invalid-content-entry-slug-error/) (E09002)<br/>Invalid content entry slug.
+- [**ContentSchemaContainsSlugError**](/es/reference/errors/content-schema-contains-slug-error/) (E09003)<br/>Content Schema should not contain `slug`.
