--- a/src/pages/es/guides/testing.mdx
+++ b/src/pages/es/guides/testing.mdx
@@ -25,7 +25,7 @@ Playwright es un framework de testing end-to-end para aplicaciones web modernas.
 
 Puedes empezar y ejecutar tus tests usando la [Extensión de VS Code](https://playwright.dev/docs/getting-started-vscode).
 
-Alternativamente, puede instalar Playwright dentro de su proyecto de Astro usando el gestor de paquetes de su elección. Sigue los pasos de la CLI para elegir JavaScript/TypeScript, el nombre de tu carpeta de tests, y añadir un workflow opcional de Github Actions.
+Alternativamente, puedes instalar Playwright dentro de tu proyecto de Astro usando el gestor de paquetes de tu elección. Sigue los pasos de la CLI para elegir JavaScript/TypeScript, el nombre de tu carpeta de tests y añadir un workflow opcional de Github Actions.
 
 <PackageManagerTabs>
   <Fragment slot="npm">
