--- a/src/pages/es/guides/testing.mdx
+++ b/src/pages/es/guides/testing.mdx
@@ -61,7 +61,7 @@ Alternativamente, puedes instalar Playwright dentro de tu proyecto de Astro usan
 </html>
 ```
 
-2. Cree una nueva carpeta y añada el siguiente archivo de test en `src/test`. Copie y pegue el siguiente test dentro del archivo para verificar que la meta información de la página es correcta. Actualice el valor `<title>` de la página para que coincida con la página que está testeando.
+2. Crea una nueva carpeta y añade el siguiente archivo de test en `src/test`. Copia y pega el siguiente test dentro del archivo para verificar que la meta información de la página es correcta. Actualiza el valor `<title>` de la página para que coincida con la página que se está testeando.
 
 ```jsx title="src/test/index.spec.ts" "Astro is awesome!"
 test('meta is correct', async ({ page }) => {
