--- a/src/pages/es/guides/testing.mdx
+++ b/src/pages/es/guides/testing.mdx
@@ -72,7 +72,7 @@ test('meta is correct', async ({ page }) => {
 ```
 
 :::tip[Establecer una url base]
-Puedes establecer [`"baseURL": "http://localhost:3000"`](https://playwright.dev/docs/api/class-testoptions#test-options-base-url) en el archivo de configuración `playwright.config.ts` para usar `page.goto("/")` en lugar de `page.goto("http://localhost:3000/")` para una URL mas conveniente.
+Puedes establecer [`"baseURL": "http://localhost:3000"`](https://playwright.dev/docs/api/class-testoptions#test-options-base-url) en el archivo de configuración `playwright.config.ts` para usar `page.goto("/")` en lugar de `page.goto("http://localhost:3000/")` para una URL más conveniente.
 :::
 
 ### Ejecutar los tests con Playwright
