--- a/src/pages/es/guides/testing.mdx
+++ b/src/pages/es/guides/testing.mdx
@@ -98,7 +98,7 @@ Ejecute los tests con el código de producción para que se asemejen más a su s
 
 Puede también hacer que Playwright inicie su servidor cuando ejecute su script de testing utilizando la opción [`webServer`](https://playwright.dev/docs/test-advanced#launching-a-development-web-server-during-the-tests)  en el archivo de configuración de Playwright.
 
-Aquí un ejemplo de la configuración y los comandos necsarios cuando se utiliza Yarn:
+Aquí un ejemplo de la configuración y los comandos necesarios cuando se utiliza Yarn:
 
 1. Añade un script de test en el archivo `package.json` en la raiz del proyecto, como `"test:e2e": "playwright test"`.
 
