--- a/src/pages/es/guides/testing.mdx
+++ b/src/pages/es/guides/testing.mdx
@@ -100,7 +100,7 @@ Puede también hacer que Playwright inicie su servidor cuando ejecute su script 
 
 Aquí un ejemplo de la configuración y los comandos necesarios cuando se utiliza Yarn:
 
-1. Añade un script de test en el archivo `package.json` en la raiz del proyecto, como `"test:e2e": "playwright test"`.
+1. Añade un script de test en el archivo `package.json` en la raíz del proyecto, como `"test:e2e": "playwright test"`.
 
 2. En `playwright.config.ts`, añade el objeto `webServer` y actualice el valor del comando `yarn preview`.
 
