--- a/src/pages/es/guides/testing.mdx
+++ b/src/pages/es/guides/testing.mdx
@@ -102,7 +102,7 @@ Aquí un ejemplo de la configuración y los comandos necesarios cuando se utiliz
 
 1. Añade un script de test en el archivo `package.json` en la raíz del proyecto, como `"test:e2e": "playwright test"`.
 
-2. En `playwright.config.ts`, añade el objeto `webServer` y actualice el valor del comando `yarn preview`.
+2. En `playwright.config.ts`, añade el objeto `webServer` y actualiza el valor del comando `yarn preview`.
 
 ```js title="playwright.config.ts" ins={3-8} "yarn preview"
 import type { PlaywrightTestConfig } from '@playwright/test';
