Add blog post link for converting Next.js
Requested by @sarah11918 – https://twitter.com/sarah11918/status/1616159813020303368

--- a/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -71,3 +71,4 @@ To convert other types of sites, such as a portfolio or documentation site, see 
 ## Community Resources 
 
 - Blog Post: [From NextJS to Astro](https://vanntile.com/blog/next-to-astro).
+- Blog Post: [Converting Next.js to Astro](https://ericclemmons.com/blog/converting-nextjs-to-astro).
