node.js -> node for consistency

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -60,7 +60,7 @@ Astro v2.0 drops Node 14 support entirely, so that all Astro users can take adva
 
 #### What should I do?
 
- Check that both your development environment and your deployment environment are using **Node.js `16.12.0` or later**.
+ Check that both your development environment and your deployment environment are using **Node `16.12.0` or later**.
 
 1. Check your local version of Node using:
 
@@ -68,7 +68,7 @@ Astro v2.0 drops Node 14 support entirely, so that all Astro users can take adva
     node -v
  
     ```
-    If your local development environment needs upgrading, [install Node.js](https://nodejs.org/en/download/).
+    If your local development environment needs upgrading, [install Node](https://nodejs.org/en/download/).
 
 
 2. Check your [deployment environment's](/en/guides/deploy/) own documentation to verify that they support Node 16. 
