Use const instead of let

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -363,7 +363,7 @@ Use [`Astro.glob()`](/en/guides/imports/#astroglob) to fetch Markdown files, or 
 ```astro
 // src/pages/index.astro
 ---
-let allPosts = await Astro.glob('./posts/*.md');
+const allPosts = await Astro.glob('./posts/*.md');
 ---
 ```
 
