--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -45,7 +45,7 @@ The `.astro` directory will be updated for you automatically anytime you run the
 If you're using Git for version control, we recommend ignoring the `.astro` directory by adding `.astro` to your `.gitignore`. This tells Git to ignore this directory and any files inside of it.
 
 ```bash
-echo ".astro" >> .gitignore
+echo "\n.astro" >> .gitignore
 ```
 :::
 
