fix pagesGlobToRssItems example
the pagesGlobToRssItems method returns a Promise, which causes an error unless the promise is resolved.

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -280,9 +280,9 @@ import rss, {
   pagesGlobToRssItems
 } from '@astrojs/rss';
 
-export function get(context) {
+export async function get(context) {
   return rss({
-    items: pagesGlobToRssItems(
+    items: await pagesGlobToRssItems(
       import.meta.glob('./blog/*.{md,mdx}'),
     ),
   });
