Update custom slug for content collection in api reference
Replace mention of the removed `slug()` function with the new page-specific frontmatter `slug`-property

--- a/src/pages/en/reference/api-reference.mdx
+++ b/src/pages/en/reference/api-reference.mdx
@@ -800,7 +800,7 @@ A unique ID using the file path relative to `src/content/[collection]`. Enumerat
 
 **Example Type:** `'entry-1' | 'entry-2' | ...`
 
-A URL-ready slug. Defaults to the `id` without the file extension, but can be configured using [the `slug()` config property](#slug). Set to the type `string` if a `slug()` override is configured, and enumerates all possible string values otherwise.
+A URL-ready slug. Defaults to the `id` without the file extension, but can be overriden by setting [the `slug` property](/en/guides/content-collections/#defining-custom-slugs) in a file's frontmatter.
 
 #### `data`
 
