--- a/src/pages/en/reference/api-reference.mdx
+++ b/src/pages/en/reference/api-reference.mdx
@@ -800,7 +800,7 @@ A unique ID using the file path relative to `src/content/[collection]`. Enumerat
 
 **Example Type:** `'entry-1' | 'entry-2' | ...`
 
-A URL-ready slug. Defaults to the `id` without the file extension, but can be overriden by setting [the `slug` property](/en/guides/content-collections/#defining-custom-slugs) in a file's frontmatter.
+A URL-ready slug. Defaults to the `id` without the file extension, but can be overridden by setting [the `slug` property](/en/guides/content-collections/#defining-custom-slugs) in a file's frontmatter.
 
 #### `data`
 
