i18n(pt-BR): Small translation updates

--- a/src/pages/pt-br/guides/testing.mdx
+++ b/src/pages/pt-br/guides/testing.mdx
@@ -11,6 +11,12 @@ Fazer testes o ajuda a escrever e manter código Astro em funcionamento. O Astro
 
 Frameworks de testes permitem que você declare **afirmações** ou **expectativas** sobre como seu código deve se comportar em situações específicas e, em seguida, as compare com o comportamento real do seu código atual.
 
+## Vitest
+
+Vitest é um framework de testes de unidade nativo do Vite com suporte a ESM, TypeScript e JSX fornecido pelo esbuild.
+
+Veja o [template inicial de Astro + Vitest](https://github.com/withastro/astro/tree/latest/examples/with-vitest) no GitHub.
+
 ## Playwright
 
 Playwright é um framework de testes de ponta a ponta para aplicações web modernas. Use a API do Playwright com JavaScript ou TypeScript para testar seu código Astro em todos os motores de renderização modernos, incluindo Chromium, WebKit e Firefox.
