--- a/src/pages/pt-br/core-concepts/layouts.mdx
+++ b/src/pages/pt-br/core-concepts/layouts.mdx
@@ -127,7 +127,7 @@ const { frontmatter, url } = Astro.props;
 ---
 <html>
   <head>
-    <meta rel="canonical" href={new URL(url, Astro.site).pathname}>
+    <link rel="canonical" href={new URL(url, Astro.site).pathname}>
     <title>{frontmatter.titulo}</title>
   </head>
   <body>
