--- a/src/pages/pt-br/guides/server-side-rendering.mdx
+++ b/src/pages/pt-br/guides/server-side-rendering.mdx
@@ -100,11 +100,11 @@ Você também pode adicionar um adaptador manualmente instalando o pacote e atua
 
 O Astro continuará sendo um gerador de sites estáticos por padrão. Porém, quando você habilita um adaptador de renderização no lado do servidor, **todas as rotas no seu diretório pages se torna uma rota renderizada no servidor** e algumas novas funcionalidades são disponibilizadas a você.
 
-### Pré-renderização
+### Renderização Híbrida
 
-<Since v="2.0.0-beta.0" />
+<Since v="2.0.0" />
 
-Qualquer arquivo `.astro` dentro do diretório `pages/` pode optar pela pré-renderização ou comportamento padrão em tempo de build, ao incluir a seguinte linha.
+Para habilitar a **renderização híbrida**, qualquer [página](/pt-br/core-concepts/astro-pages/) ou [endpoint do servidor](/pt-br/core-concepts/endpoints/#endpoints-do-servidor-rotas-de-api) pode optar pela pré-renderização. Esses arquivos serão estaticamente renderizados em tempo de build, similiar ao modo de [`output`](/pt-br/reference/configuration-reference/#output) estático padrão.
 
 ```astro title="src/pages/index.astro" {2}
 ---
