Update tutorial snippets

--- a/src/pages/en/tutorial/5-astro-api/3.mdx
+++ b/src/pages/en/tutorial/5-astro-api/3.mdx
@@ -351,7 +351,7 @@ const { frontmatter } = Astro.props;
 
   <p>Written by: {frontmatter.author}</p>
 
-  <img src={frontmatter.postImage} width="300" alt={frontmatter.image.alt} /> 
+  <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} /> 
 
   <div class="tags">
     {frontmatter.tags.map((tag) => (
