--- a/src/pages/en/tutorial/4-layouts/3.mdx
+++ b/src/pages/en/tutorial/4-layouts/3.mdx
@@ -39,7 +39,7 @@ You already have a `BaseLayout.astro` for defining the overall layout of your pa
       <p>{frontmatter.pubDate.slice(0,10)}</p>
       <p><em>{frontmatter.description}</em></p>
       <p>Written by: {frontmatter.author}</p>
-      <img src={frontmatter.postImage} width="300" />
+      <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
       <slot />
     </BaseLayout>
     ```
@@ -60,7 +60,7 @@ You already have a `BaseLayout.astro` for defining the overall layout of your pa
       <p>{frontmatter.pubDate.slice(0,10)}</p>
       <p><em>{frontmatter.description}</em></p>
       <p>Written by: {frontmatter.author}</p>
-      <img src={frontmatter.postImage} width="300" />
+      <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
       <slot />
     </BaseLayout>
     ```
