--- a/src/pages/en/guides/deploy/kinsta.mdx
+++ b/src/pages/en/guides/deploy/kinsta.mdx
@@ -18,7 +18,7 @@ To host your project on **Kinsta Application Hosting**, you need to:
 - Install the [`serve`](https://www.npmjs.com/package/serve) package and set the `start` script to `serve dist/`.
 
 Here are the necessary lines in your `package.json` file:
-```json title="astro.config.mjs" {2,6} ins={12} "serv dist/"
+```json title="package.json" {2,6} ins={12} "serv dist/"
 {
   "name": "anything", // This is required, but the value does not matter.
   "scripts": {
