Replace deprecated pnpx command

--- a/src/pages/de/guides/integrations-guide.mdx
+++ b/src/pages/de/guides/integrations-guide.mdx
@@ -39,7 +39,7 @@ Führe das `astro add`-Kommando mit dem Paketmanager deiner Wahl aus, und unser 
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  pnpx astro add react
+  pnpm astro add react
   ```
   </Fragment>
   <Fragment slot="yarn">
@@ -59,7 +59,7 @@ Es ist sogar möglich, mehrere Integrationen gleichzeitig zu konfigurieren!
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  pnpx astro add react tailwind partytown
+  pnpm astro add react tailwind partytown
   ```
   </Fragment>
   <Fragment slot="yarn">
