--- a/src/pages/en/guides/integrations-guide.mdx
+++ b/src/pages/en/guides/integrations-guide.mdx
@@ -35,7 +35,7 @@ Run the `astro add` command using the package manager of your choice and our aut
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  pnpx astro add react
+  pnpm astro add react
   ```
   </Fragment>
   <Fragment slot="yarn">
@@ -55,7 +55,7 @@ It's even possible to configure multiple integrations at the same time!
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  pnpx astro add react tailwind partytown
+  pnpm astro add react tailwind partytown
   ```
   </Fragment>
   <Fragment slot="yarn">
