--- a/src/pages/en/guides/server-side-rendering.mdx
+++ b/src/pages/en/guides/server-side-rendering.mdx
@@ -50,7 +50,7 @@ You can add any of the official adapters with the following `astro add` command.
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  pnpx astro add netlify
+  pnpm astro add netlify
   ```
   </Fragment>
   <Fragment slot="yarn">
