--- a/src/pages/es/guides/server-side-rendering.mdx
+++ b/src/pages/es/guides/server-side-rendering.mdx
@@ -51,7 +51,7 @@ Puedes añadir cualquiera de los adaptadores oficiales con el comando `astro add
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  pnpx astro add netlify
+  pnpm astro add netlify
   ```
   </Fragment>
   <Fragment slot="yarn">
@@ -75,7 +75,7 @@ También puedes añadir un adaptador manualmente instalando el paquete y actuali
      </Fragment>
      <Fragment slot="pnpm">
      ```shell
-     pnpx astro add netlify
+     pnpm astro add netlify
      ```
      </Fragment>
      <Fragment slot="yarn">
