--- a/src/pages/fr/guides/integrations-guide.mdx
+++ b/src/pages/fr/guides/integrations-guide.mdx
@@ -72,7 +72,7 @@ npx astro add react
 # Utilisant Yarn
 yarn astro add react
 # Utilisant PNPM
-pnpx astro add react
+pnpm astro add react
 ```
 
 Il est aussi possible de configurer plusieurs intégrations en même temps !
@@ -83,7 +83,7 @@ npx astro add react tailwind partytown
 # Utilisant Yarn
 yarn astro add react tailwind partytown
 # Utilisant PNPM
-pnpx astro add react tailwind partytown
+pnpm astro add react tailwind partytown
 ```
 
 ## Gérer les dépendances d'intégration
