--- a/src/pages/zh-cn/guides/integrations-guide.mdx
+++ b/src/pages/zh-cn/guides/integrations-guide.mdx
@@ -71,7 +71,7 @@ npx astro add react
 # 使用 Yarn
 yarn astro add react
 # 使用 PNPM
-pnpx astro add react
+pnpm astro add react
 ```
 
 甚至还可以同时配置多个集成!
@@ -82,7 +82,7 @@ npx astro add react tailwind partytown
 # 使用 Yarn
 yarn astro add react tailwind partytown
 # 使用 PNPM
-pnpx astro add react tailwind partytown
+pnpm astro add react tailwind partytown
 ```
 
 ## 处理集成依赖
