--- a/src/pages/es/guides/integrations-guide.mdx
+++ b/src/pages/es/guides/integrations-guide.mdx
@@ -35,7 +35,7 @@ Puedes correr el comando `astro add` utilizando el gestor de paquetes de tu pref
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  pnpx astro add react
+  pnpm astro add react
   ```
   </Fragment>
   <Fragment slot="yarn">
@@ -55,7 +55,7 @@ Puedes correr el comando `astro add` utilizando el gestor de paquetes de tu pref
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  pnpx astro add react tailwind partytown
+  pnpm astro add react tailwind partytown
   ```
   </Fragment>
   <Fragment slot="yarn">
