--- a/src/pages/ja/guides/integrations-guide.mdx
+++ b/src/pages/ja/guides/integrations-guide.mdx
@@ -39,7 +39,7 @@ Astroには、インテグレーションのセットアップを自動化する
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  pnpx astro add react
+  pnpm astro add react
   ```
   </Fragment>
   <Fragment slot="yarn">
@@ -59,7 +59,7 @@ Astroには、インテグレーションのセットアップを自動化する
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  pnpx astro add react tailwind partytown
+  pnpm astro add react tailwind partytown
   ```
   </Fragment>
   <Fragment slot="yarn">
