--- a/src/pages/pt-br/guides/server-side-rendering.mdx
+++ b/src/pages/pt-br/guides/server-side-rendering.mdx
@@ -49,7 +49,7 @@ Você pode adicionar qualquer um dos adaptadores oficiais com o comando `astro a
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  pnpx astro add netlify
+  pnpm astro add netlify
   ```
   </Fragment>
   <Fragment slot="yarn">
@@ -73,7 +73,7 @@ Você também pode adicionar um adaptador manualmente instalando o pacote e atua
     </Fragment>
     <Fragment slot="pnpm">
     ```shell
-    pnpx astro add netlify
+    pnpm astro add netlify
     ```
     </Fragment>
     <Fragment slot="yarn">
