--- a/src/pages/es/core-concepts/layouts.mdx
+++ b/src/pages/es/core-concepts/layouts.mdx
@@ -6,6 +6,7 @@ description: >-
   entre páginas con plantillas comunes.
 i18nReady: true
 ---
+import FileTree from '~/components/FileTree.astro'
 
 **Las plantillas** son [componentes de Astro](/es/core-concepts/astro-components/) para proporcionar una estructura reutilizable, como una plantilla de página.
 
@@ -119,7 +120,7 @@ const { frontmatter, url } = Astro.props;
 ---
 <html>
   <head>
-    <meta rel="canonical" href={new URL(url, Astro.site).pathname}>
+    <link rel="canonical" href={new URL(url, Astro.site).pathname}>
     <title>{frontmatter.title}</title>
   </head>
   <body>
