--- a/src/pages/es/core-concepts/sharing-state.mdx
+++ b/src/pages/es/core-concepts/sharing-state.mdx
@@ -3,11 +3,10 @@ layout: ~/layouts/MainLayout.astro
 title: Compartiendo Estado
 i18nReady: true
 ---
+
 import UIFrameworkTabs from '~/components/tabs/UIFrameworkTabs.astro'
 import LoopingVideo from '~/components/LoopingVideo.astro'
 import JavascriptFlavorTabs from '~/components/tabs/JavascriptFlavorTabs.astro'
-
-
 
 Al construir tu proyecto usando la [arquitectura de islas / hidratación parcial](/es/concepts/islands/), puede que te hayas topado con este problema: **Quiero compartir estado entre mis componentes.**
 
@@ -24,6 +23,7 @@ La librería [Nano Stores](https://github.com/nanostores/nanostores) te permite 
 Aun así, hay otras alternativas a explorar. Entre ellas puedes encontrar:
 - [Svelte stores incorporadas](https://svelte.dev/tutorial/writable-stores)
 - [Solid signals](https://www.solidjs.com/docs/latest) fuera de un elemento de contexto
+- [API de reactividad de Vue](https://vuejs.org/guide/scaling-up/state-management.html#simple-state-management-with-reactivity-api)
 - [Enviar eventos personalizados del navegador](https://developer.mozilla.org/es/docs/Web/Events/Creating_and_triggering_events) entre componentes
 
 :::note[FAQ]
