fixed broken link

--- a/src/pages/es/guides/server-side-rendering.mdx
+++ b/src/pages/es/guides/server-side-rendering.mdx
@@ -106,7 +106,7 @@ Astro seguirá siendo un generador de sitios estáticos por defecto. Pero una ve
 
 Since v="2.0.0" />
 
-Para habilitar **renderizado híbrido**, cualquier [página](/es/core-concepts/astro-pages/) o [endpoint del servidor](/es/core-concepts/endpoints/#-endpoints-del-servidor-(rutas-de-api)) puedes optar por el prerenderizado. Estos archivos se renderizarán estáticamente en tiempo de compilación, similar al modo estático por defecto [`output`](/es/reference/configuration-reference/#output).
+Para habilitar **renderizado híbrido**, cualquier [página](/es/core-concepts/astro-pages/) o [endpoint del servidor](/es/core-concepts/endpoints/#-endpoints-del-servidor-rutas-de-api) puedes optar por el prerenderizado. Estos archivos se renderizarán estáticamente en tiempo de compilación, similar al modo estático por defecto [`output`](/es/reference/configuration-reference/#output).
 
 ```astro title="src/pages/index.astro" {2}
 ---
