--- a/src/pages/en/guides/deploy/sst.mdx
+++ b/src/pages/en/guides/deploy/sst.mdx
@@ -7,7 +7,7 @@ i18nReady: true
 
 You can deploy an Astro site using [SST](https://sst.dev), an open-source framework for deploying applications to AWS. This is the easiest way to get a fully serverless Astro deployment on AWS with SSR support.
 
-You can also use any additional SST constructs like Cron Jobs, Buckets, Queues, etc while maintaining typesafety.
+You can also use any additional SST constructs like Cron Jobs, Buckets, Queues, etc while maintaining type-safety.
 
 ## Quickstart
 
