--- a/src/pages/en/guides/deploy/sst.mdx
+++ b/src/pages/en/guides/deploy/sst.mdx
@@ -16,7 +16,13 @@ You can also use any additional SST constructs like Cron Jobs, Buckets, Queues, 
 1. It should detect that you are using Astro and ask you to confirm.
 1. Once you're ready for deployment you can run `npx sst deploy --stage=production`
 
-If you wish to use any [additional SST constructs](https://docs.sst.dev/) they can be added to `sst.config.ts`. Then take a look at [Resource Binding](https://docs.sst.dev/resource-binding) to understand how to use them in your Astro code.
+To use any [additional SST constructs](https://docs.sst.dev/), add them to `sst.config.ts`. 
+
+```js
+// config example here might be nice?
+```
+
+Consult the [SST docs on Resource Binding](https://docs.sst.dev/resource-binding) to understand how to use them in your Astro code.
 
 Or if you prefer a walkthrough you can watch [this video](https://www.youtube.com/watch?v=AFP3ZHxO7Gg).
 
