--- a/src/pages/en/guides/deploy/sst.mdx
+++ b/src/pages/en/guides/deploy/sst.mdx
@@ -26,4 +26,4 @@ Consult the [SST docs on Resource Binding](https://docs.sst.dev/resource-binding
 
 Or if you prefer a walkthrough you can watch [this video](https://www.youtube.com/watch?v=AFP3ZHxO7Gg).
 
-If you have any questions [ask in the SST discord](https://discord.gg/sst).
+If you have any questions, you can [ask in the SST discord](https://discord.gg/sst).
