--- a/src/pages/en/guides/deploy/sst.mdx
+++ b/src/pages/en/guides/deploy/sst.mdx
@@ -24,6 +24,6 @@ To use any [additional SST constructs](https://docs.sst.dev/), add them to `sst.
 
 Consult the [SST docs on Resource Binding](https://docs.sst.dev/resource-binding) to understand how to use them in your Astro code.
 
-Or if you prefer a walkthrough you can watch [this video](https://www.youtube.com/watch?v=AFP3ZHxO7Gg).
+You can also watch [a video walkthrough of this process](https://www.youtube.com/watch?v=AFP3ZHxO7Gg) that will guide you through the steps.
 
 If you have any questions, you can [ask in the SST discord](https://discord.gg/sst).
