--- a/src/pages/en/guides/deploy/sst.mdx
+++ b/src/pages/en/guides/deploy/sst.mdx
@@ -18,8 +18,17 @@ You can also use any additional SST constructs like Cron Jobs, Buckets, Queues, 
 
 To use any [additional SST constructs](https://docs.sst.dev/), add them to `sst.config.ts`. 
 
-```js
-// config example here might be nice?
+```ts {2}
+app.stack(function Site(ctx) {
+  const bucket = new Bucket(ctx.stack, "public");
+  const site = new AstroSite(ctx.stack, "site", {
+    bind: [bucket],
+  });
+
+  ctx.stack.addOutputs({
+    url: site.url,
+  });
+});
 ```
 
 Consult the [SST docs on Resource Binding](https://docs.sst.dev/resource-binding) to understand how to use them in your Astro code.
