Additional code sample

--- a/src/pages/en/guides/deploy/sst.mdx
+++ b/src/pages/en/guides/deploy/sst.mdx
@@ -18,7 +18,7 @@ You can also use any additional SST constructs like Cron Jobs, Buckets, Queues, 
 
 To use any [additional SST constructs](https://docs.sst.dev/), add them to `sst.config.ts`. 
 
-```ts {2}
+```ts {2} {4}
 app.stack(function Site(ctx) {
   const bucket = new Bucket(ctx.stack, "public");
   const site = new AstroSite(ctx.stack, "site", {
@@ -31,7 +31,14 @@ app.stack(function Site(ctx) {
 });
 ```
 
-Consult the [SST docs on Resource Binding](https://docs.sst.dev/resource-binding) to understand how to use them in your Astro code.
+And then access them in your astro code
+
+```ts
+import { Bucket } from "sst/node/bucket"
+console.log(Bucket.public.bucketName)
+```
+
+Consult the [SST docs on Resource Binding](https://docs.sst.dev/resource-binding) learn more.
 
 You can also watch [a video walkthrough of this process](https://www.youtube.com/watch?v=AFP3ZHxO7Gg) that will guide you through the steps.
 
