--- a/src/pages/en/guides/deploy/sst.mdx
+++ b/src/pages/en/guides/deploy/sst.mdx
@@ -23,6 +23,17 @@ app.stack(function Site(ctx) {
   const bucket = new Bucket(ctx.stack, "public");
   const site = new AstroSite(ctx.stack, "site", {
     bind: [bucket],
+
+You can also watch [a video walkthrough of this process](https://www.youtube.com/watch?v=AFP3ZHxO7Gg) that will guide you through the steps.
+
+### SST constructs
+To use any [additional SST constructs](https://docs.sst.dev/), add them to `sst.config.ts`. 
+
+```ts {2}
+app.stack(function Site(ctx) {
+  const bucket = new Bucket(ctx.stack, "public");
+  const site = new AstroSite(ctx.stack, "site", {
+    bind: [bucket],
   });
 
   ctx.stack.addOutputs({
@@ -31,15 +42,6 @@ app.stack(function Site(ctx) {
 });
 ```
 
-And then access them in your astro code
+Consult the [SST docs on Resource Binding](https://docs.sst.dev/resource-binding) to understand how to use them in your Astro code.
 
-```ts
-import { Bucket } from "sst/node/bucket"
-console.log(Bucket.public.bucketName)
-```
-
-Consult the [SST docs on Resource Binding](https://docs.sst.dev/resource-binding) learn more.
-
-You can also watch [a video walkthrough of this process](https://www.youtube.com/watch?v=AFP3ZHxO7Gg) that will guide you through the steps.
-
-If you have any questions, you can [ask in the SST discord](https://discord.gg/sst).
+If you have any questions, you can [ask in the SST Discord](https://discord.gg/sst).
