--- a/src/pages/en/guides/deploy/sst.mdx
+++ b/src/pages/en/guides/deploy/sst.mdx
@@ -16,20 +16,12 @@ You can also use any additional SST constructs like Cron Jobs, Buckets, Queues, 
 1. It should detect that you are using Astro and ask you to confirm.
 1. Once you're ready for deployment you can run `npx sst deploy --stage=production`
 
-To use any [additional SST constructs](https://docs.sst.dev/), add them to `sst.config.ts`. 
-
-```ts {2} {4}
-app.stack(function Site(ctx) {
-  const bucket = new Bucket(ctx.stack, "public");
-  const site = new AstroSite(ctx.stack, "site", {
-    bind: [bucket],
-
 You can also watch [a video walkthrough of this process](https://www.youtube.com/watch?v=AFP3ZHxO7Gg) that will guide you through the steps.
 
 ### SST constructs
 To use any [additional SST constructs](https://docs.sst.dev/), add them to `sst.config.ts`. 
 
-```ts {2}
+```ts {2} {4}
 app.stack(function Site(ctx) {
   const bucket = new Bucket(ctx.stack, "public");
   const site = new AstroSite(ctx.stack, "site", {
@@ -42,6 +34,15 @@ app.stack(function Site(ctx) {
 });
 ```
 
-Consult the [SST docs on Resource Binding](https://docs.sst.dev/resource-binding) to understand how to use them in your Astro code.
+And then access them in your astro code
+
+```astro
+---
+import { Bucket } from "sst/node/bucket"
+console.log(Bucket.public.bucketName)
+---
+```
+
+Consult the [SST docs on Resource Binding](https://docs.sst.dev/resource-binding) to learn more
 
 If you have any questions, you can [ask in the SST Discord](https://discord.gg/sst).
