--- a/src/pages/en/guides/deploy/sst.mdx
+++ b/src/pages/en/guides/deploy/sst.mdx
@@ -34,7 +34,7 @@ app.stack(function Site(ctx) {
 });
 ```
 
-And then access them in your astro code
+And then access them in your `.astro` file.
 
 ```astro
 ---
