config file name title

--- a/src/pages/en/guides/deploy/sst.mdx
+++ b/src/pages/en/guides/deploy/sst.mdx
@@ -21,7 +21,7 @@ You can also watch [a video walkthrough of this process](https://www.youtube.com
 ### SST constructs
 To use any [additional SST constructs](https://docs.sst.dev/), add them to `sst.config.ts`. 
 
-```ts {2} {4}
+```ts {2} {4} title="sst.config.ts"
 app.stack(function Site(ctx) {
   const bucket = new Bucket(ctx.stack, "public");
   const site = new AstroSite(ctx.stack, "site", {
