learn more -> official resources, with starter project

--- a/src/pages/en/guides/cms/buttercms.mdx
+++ b/src/pages/en/guides/cms/buttercms.mdx
@@ -119,8 +119,9 @@ const fields = pageData.fields as Fields;
 </html>
 ```
 
-### Learn More
+## Official Resources
 
+- ButterCMS's [Astro Starter Project](https://buttercms.com/starters/astro-starter-project/)
 - The [full ButterCMS API documentation](https://buttercms.com/docs/api/)
 - ButterCMS's [JavaScript Guide](https://buttercms.com/docs/api-client/javascript/)
 
