disclaimer in Integrating with Astro

--- a/src/pages/en/guides/cms/buttercms.mdx
+++ b/src/pages/en/guides/cms/buttercms.mdx
@@ -13,7 +13,8 @@ ButterCMS is a headless CMS and blog engine that allows you to publish structure
 
 ## Integrating with Astro
 
-In this section, we'll use the [ButterCMS SDK](https://www.npmjs.com/package/buttercms) to bring your data into your Astro project.
+In this section, we'll use the [ButterCMS SDK](https://www.npmjs.com/package/buttercms) to bring your data into your Astro project. 
+(For a full blog site example, see the [Astro + ButterCMS Starter Project](https://buttercms.com/starters/astro-starter-project/).)
 
 To get started, you will need to have the following:
 
@@ -121,7 +122,7 @@ const fields = pageData.fields as Fields;
 
 ## Official Resources
 
-- ButterCMS's [Astro Starter Project](https://buttercms.com/starters/astro-starter-project/)
+- [Astro + ButterCMS Starter Project](https://buttercms.com/starters/astro-starter-project/)
 - The [full ButterCMS API documentation](https://buttercms.com/docs/api/)
 - ButterCMS's [JavaScript Guide](https://buttercms.com/docs/api-client/javascript/)
 
