--- a/src/pages/es/guides/deploy/sst.mdx
+++ b/src/pages/es/guides/deploy/sst.mdx
@@ -1,5 +1,5 @@
 ---
-title: Despliega tu sitio Astro en AWS con SST
+title: Despliega tu proyecto de Astro en AWS con SST
 description: Cómo desplegar tu sitio Astro en AWS con SST
 layout: ~/layouts/DeployGuideLayout.astro
 i18nReady: true
