Add english term
Co-authored-by: Kevin Zuniga Cuellar <46791833+kevinzunigacuellar@users.noreply.github.com>

--- a/src/pages/es/guides/deploy/sst.mdx
+++ b/src/pages/es/guides/deploy/sst.mdx
@@ -19,7 +19,7 @@ Además, puedes usar cualquier construcción SST adicional como Cron Jobs, Bucke
 También puedes ver [un vídeo tutorial de este proceso](https://www.youtube.com/watch?v=AFP3ZHxO7Gg) que te guiará a través de los pasos.
 
 ### Constructos SST
-Para usar cualquier [constructo SST adicional](https://docs.sst.dev/), añádelos a `sst.config.ts`. 
+Para usar cualquier [construct SST](https://docs.sst.dev/) adicional, añádelos a tu `sst.config.ts`. 
 
 ```ts {2} {4} title="sst.config.ts"
 app.stack(function Site(ctx) {
