--- a/src/pages/es/guides/deploy/sst.mdx
+++ b/src/pages/es/guides/deploy/sst.mdx
@@ -5,7 +5,7 @@ layout: ~/layouts/DeployGuideLayout.astro
 i18nReady: true
 ---
 
-Puedes desplegar un sitio Astro usando [SST](https://sst.dev), un framework de código abierto para desplegar aplicaciones completamente sin servidor en AWS con soporte SSG y SSR.
+Puedes desplegar un proyecto de Astro usando [SST](https://sst.dev), un framework de código abierto para desplegar aplicaciones completamente serverless en AWS con soporte SSG y SSR.
 
 Además, puedes usar cualquier construcción SST adicional como Cron Jobs, Buckets, Queues, etc. mientras mantienes la seguridad de tipos.
 
