--- a/src/pages/en/guides/cms/buttercms.mdx
+++ b/src/pages/en/guides/cms/buttercms.mdx
@@ -12,12 +12,11 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 ButterCMS is a headless CMS and blog engine that allows you to publish structured content to use in your project.
 
 ## Integrating with Astro
-
+:::note
+For a full blog site example, see the [Astro + ButterCMS Starter Project](https://buttercms.com/starters/astro-starter-project/).
+:::
 In this section, we'll use the [ButterCMS SDK](https://www.npmjs.com/package/buttercms) to bring your data into your Astro project. 
-(For a full blog site example, see the [Astro + ButterCMS Starter Project](https://buttercms.com/starters/astro-starter-project/).)
-
 To get started, you will need to have the following:
-
 ### Prerequisites
 
 1. **An Astro project** - If you don't have an Astro project yet, our [Installation guide](/en/install/auto/) will get you up and running in no time.
