--- a/src/pages/en/guides/markdown-content.mdx
+++ b/src/pages/en/guides/markdown-content.mdx
@@ -133,7 +133,7 @@ description: Find out what makes Astro awesome!
 This is a post written in Markdown.
 ```
 
-Frontmatter properties are then available to the layout through `Astro.props`:
+Metadata are then available to the layout through `Astro.props`. For example, you can access frontmatter properties through `Astro.props.frontmatter`:
 
 **`src/layouts/BlogPostLayout.astro`**
 
@@ -151,8 +151,9 @@ const {frontmatter} = Astro.props;
 </html>
 ```
 
-You can also [style your Markdown](/en/guides/styling/#markdown-styling) in your layout component.
+[See all properties](/en/core-concepts/layouts/#markdown-layout-props) available through `Astro.props` in a Markdown layout.
 
+You can also [style your Markdown](/en/guides/styling/#markdown-styling) in your layout component.
 
 📚 Learn more about [Markdown Layouts](/en/core-concepts/layouts/#markdownmdx-layouts).
 
