Apply suggestions from code review
Co-authored-by: pilcrowOnPaper <80624252+pilcrowOnPaper@users.noreply.github.com>

--- a/src/pages/ja/guides/images.mdx
+++ b/src/pages/ja/guides/images.mdx
@@ -32,7 +32,7 @@ import rocket from '../images/rocket.svg';
 
 `.md`ファイル内では標準的な`![]()`構文や`<img>`タグを記載することで`public/`フォルダや、他サーバー上にあるリモート画像を表示できます。
 
-もし`public/`に画像を保存できない場合、Markdownライクな文法でインポートされたコンポーネントを結合できる`.mdx`ファイルフォーマットの利用をお勧めします。AstroにMDXをサポートするには[MDX インテグレーション](/ja/guides/integrations-guide/mdx/)を利用します。
+もし`public/`に画像を保存できない場合、Markdownライクな文法でインポートされたコンポーネントを結合できる`.mdx`ファイルフォーマットの利用をお勧めします。AstroにMDXのサポートを追加するには[MDX インテグレーション](/ja/guides/integrations-guide/mdx/)を利用します。
 
 ```md
 // src/pages/post-1.md
@@ -52,7 +52,7 @@ import rocket from '../images/rocket.svg';
 
 `.mdx`ファイル内では標準的なMarkdown文法`![]()`やJSXの`<img />`タグを使って`public/`フォルダーやリモートサーバーの画像を表示できます。
 
-加えて、Astroコンポーネントのようにプロジェクトの`src`ディレクトリに保存されている画像をインポートして利用できます。
+加えて、Astroコンポーネントのようにプロジェクトの`src/`ディレクトリに保存されている画像をインポートして利用できます。
 
 ```mdx title="src/pages/post-1.mdx"
 
@@ -74,7 +74,7 @@ import rocket from '../images/rocket.svg';
 
 ### UIフレームワークコンポーネント内
 
-[UIフレームコンポーネント](/ja/core-concepts/framework-components/)(ReactやSvelteなど)に画像を追加する場合、そのコンポーネントのフレームワークに沿った画像の文法を利用します。
+[UIフレームコンポーネント](/ja/core-concepts/framework-components/)(ReactやSvelteなど)に画像を追加する場合、そのコンポーネントのフレームワークに沿った画像の構文を利用します。
 
 ## 画像の保存場所
 
@@ -82,7 +82,7 @@ import rocket from '../images/rocket.svg';
 
 `src`に保存された画像は、コンポーネント(`.astro`や`.mdx`、そして他のUIフレームワーク)から利用できますが、Markdownファイルからは利用できません。
 
-Markdownファイルから利用する場合、[`public/`へ配置する](#public)か[CMSやCDN上の画像を利用](#cmsやcdn上の画像利用)することをお勧めします。
+Markdownファイルを利用する必要がある場合、[`public/`へ配置する](#public)か[CMSやCDN上の画像を利用](#cmsやcdn上の画像利用)することをお勧めします。
 
 画像を**相対ファイルパス**または[importエイリアス](/ja/guides/aliases/)を利用してコンポーネントファイル内でインポートし、画像の`src`属性として利用できます。
 
@@ -101,7 +101,7 @@ import logo from '../images/logo.png';
 
 `public/`に保存された画像はコンポーネント(`.astro`や`.mdx`、そして他のUIフレームワーク)とMarkdownファイルからも利用できます。
 
-しかし、`/public`ディレクトリにあるファイルは常に処理されずにそのままで提供、コピーされます。Markdownファイル以外で画像を利用する場合はAstroが画像を変換・最適化・バンドルできるように、可能な限りローカル画像は`src`への保存をお勧めします。
+しかし、`/public`ディレクトリにあるファイルは処理されずにそのまま提供、コピーされます。Markdownファイル以外で画像を利用する場合はAstroが画像を変換・最適化・バンドルできるように、可能な限りローカル画像は`src`に保存するのをお勧めします。
 
 `src`属性は**publicフォルダからの相対パス**です。Markdownでは`![]()`の表記を利用できます。
 
@@ -114,15 +114,15 @@ import logo from '../images/logo.png';
 
 ## Astro画像インテグレーション
 
-Astroの公式な画像のインテグレーションでは、最適化された画像をレンダリングするための2つの`<Image />`と`<Picture />`コンポーネントを提供しています。これらのコンポーネントは全ての静的サイトと、[サーバーサイドレンダリングするデプロイホスト](/ja/guides/integrations-guide/image/#installation)をサポートしています。
+Astro公式の画像のインテグレーションは、最適化された画像をレンダリングするためのAstroコンポーネント`<Image />`と`<Picture />`を提供しています。これらのコンポーネントは全ての静的サイトと、[一部のサーバーサイドレンダリングのデプロイホスト](/ja/guides/integrations-guide/image/#installation)をサポートしています。
 
-[`@astrojs/image`のインストール](/ja/guides/integrations-guide/image/#installation)することで、`.astro`と`.mdx`などのAstroコンポーネントを利用できるファイル内でこの2つのコンポーネントを利用できます。
+[`@astrojs/image`のインストール](/ja/guides/integrations-guide/image/#installation)で、`.astro`と`.mdx`などのAstroコンポーネントを利用できるファイル内でこの2つのコンポーネントを利用できます。
 
 ### `<Image />`
 
 Astroの[`<Image />`コンポーネント](/ja/guides/integrations-guide/image/#image-)は1つの画像を最適化し、幅・高さ・アスペクト比を指定できます。また特定の出力フォーマットに画像を変換できます。
 
-このコンポーネントはディスプレイ間で一貫したサイズを維持したい画像や、品質を厳密にコントロールしたい画像(ロゴなど)で有効です。
+このコンポーネントはディスプレイ間で一貫したサイズを維持したい画像や、画質を厳密にコントロールしたいもの(ロゴなど)に有効です。
 
 レスポンシブ画像の場合やアートディレクションの場合は、代わりに`<Picture />`コンポーネントを利用します。
 
@@ -142,7 +142,7 @@ Astroの[`<Image />`コンポーネント](/ja/guides/integrations-guide/image/#
 
 `<Image />`コンポーネントはリモート画像のオリジナルのファイルフォーマットを検知できないため、リモート画像を変換するために出力する`format`(pngやavifなど)を指定する必要があります。
 
-`<Image />`コンポーネントはリモート画像のサイズを認識しないため、[`width`](/ja/guides/integrations-guide/image/#width)と[`height`](/ja/guides/integrations-guide/image/#height)、またはサイズの[`アスペクト比`](/ja/guides/integrations-guide/image/#aspectratio)を指定して、コンテンツレイアウトのシフトを回避する必要もあります。
+`<Image />`コンポーネントはリモート画像のサイズを認識しないので、コンテンツレイアウトのシフトを回避するために[`width`](/ja/guides/integrations-guide/image/#width)と[`height`](/ja/guides/integrations-guide/image/#height)、またはどちらか1つのサイズと[`aspectRatio`](/ja/guides/integrations-guide/image/#aspectratio)を指定する必要があります。
 
 [その他の属性](/ja/guides/integrations-guide/image/#image-)はオプションです。
 
@@ -175,24 +175,24 @@ const remoteAlt = "A low-angle view of a forest during the daytime";
 <!-- 元画像の幅、高さ、フォーマットを維持したままの最適化されたローカル画像 -->
 <Image src={localImage} alt={localAlt} />
 
-<!-- 元画像のアスペクト比に合わせて高さが再計算される-->
+<!-- 元画像のアスペクト比に合わせて高さが再計算されます-->
 <Image src={localImage} width={300} alt={localAlt} />
 
-<!-- リモート画像では、希望のサイズとフォーマットが必須属性です -->
+<!-- リモート画像では、サイズとフォーマットの指定が必要です -->
 <Image src={remoteImage} width={300} aspectRatio="1:1" format="png" alt={remoteAlt} />
 
-<!-- 特定の幅と高さで切り取りをする -->
+<!-- 特定の幅と高さで切り取りをします -->
 <Image src={localImage} width={300} height={600} alt={localAlt}/>
 <Image src={remoteImage} width={544} height={184} format="png" alt={remoteAlt}/>
 
-<!-- 特定のアスペクト比で切り取り、avifフォーマットに変換する -->
+<!-- 特定のアスペクト比で切り取り、avifフォーマットに変換されます -->
 <Image src={localImage} aspectRatio="16:9" format="avif" alt={localAlt}/>
 <Image src={remoteImage} height={200} aspectRatio="16:9" format="avif" alt={remoteAlt}/>
 
-<!-- インラインのディレクティブでローカル画像のインポートが可能 -->
+<!-- ローカル画像のインポート文はそのままインライン化できます -->
 <Image src={import('../assets/logo.png')} alt={localAlt}/>
 
-<!-- 画像が`/public`フォルダーにある場合、`/public`からの相対パスを利用する -->
+<!-- 画像が`/public`フォルダーにある場合、`/public`からの相対パスを利用します -->
 <Image src="/penguin.jpg" width="300" aspectRatio={1} format="png" alt="A happy penguin"/>
 ```
 
@@ -200,12 +200,12 @@ const remoteAlt = "A low-angle view of a forest during the daytime";
 
 Astroの[`<Picture />`コンポーネント](/ja/guides/integrations-guide/image/#picture-)は複数の画像サイズ・フォーマット・レイアウトなど、サイト上でレスポンシブな画像を提供するために利用できます。
 
-利用ユーザーのブラウザに最適な画像サイズ、解像度、そして画面サイズや帯域幅に基づいたファイルタイプを選択できます。また、メディアクエリに基づいてブラウザに従わせるルールを指定できます。
+画面サイズや帯域幅に基づいて、画像に最適なサイズ、解像度、ファイルタイプを利用ユーザーのブラウザに任せることができます。また、メディアクエリに基づいてブラウザに従わせるルールを指定できます。
 
-このコンポーネントは、ユーザーが様々な画面サイズで見る場合に最適かしたり、アートディレクションに最適です。
+このコンポーネントは、ユーザーが様々な画面サイズで見る画像を最適化するためや、アートディレクションに最適です。
 
 :::tip
-[レスポンシブ画像とアートディレクション](https://developer.mozilla.org/ja/docs/Learn/HTML/Multimedia_and_embedding/Responsive_images#%E3%82%A2%E3%83%BC%E3%83%88%E3%83%87%E3%82%A3%E3%83%AC%E3%82%AF%E3%82%B7%E3%83%A7%E3%83%B3)についてもっと知りたい場合はMDNのガイドを参照してください。
+[レスポンシブ画像とアートディレクション](https://developer.mozilla.org/ja/docs/Learn/HTML/Multimedia_and_embedding/Responsive_images#%E3%82%A2%E3%83%BC%E3%83%88%E3%83%87%E3%82%A3%E3%83%AC%E3%82%AF%E3%82%B7%E3%83%A7%E3%83%B3)の詳細はMDNのガイドを参照してください。
 :::
 
 #### ローカル画像
@@ -216,7 +216,7 @@ Astroの[`<Picture />`コンポーネント](/ja/guides/integrations-guide/image
 
 画像の幅と画像のガイダンスをコンポーネントへ渡す必要がありますが、[その他の属性](/ja/guides/integrations-guide/image/#picture-)はオプションです。
 
-`<Picture />`コンポーネントの[`formats`](/ja/guides/integrations-guide/image/#formats)には指定がなければ、デフォルト値は元の画像のフォーマットに加えて`avif`と`webp`が含まれます。
+`<Picture />`コンポーネントの[`formats`](/ja/guides/integrations-guide/image/#formats)に指定がなければ、デフォルト値は元の画像のフォーマットに加えて`avif`と`webp`が含まれます。
 
 #### リモート画像
 
@@ -224,7 +224,7 @@ Astroの[`<Picture />`コンポーネント](/ja/guides/integrations-guide/image
 
 完全なURLを`<Picture />`コンポーネントの`src`属性へ渡します。
 
-またリモート画像のビルド時に正しい高さを計算できるように`aspectRatio`も必要になります。
+またビルド時に正しい高さを計算できるようにリモート画像は`aspectRatio`も必要になります。
 
 画像の幅と画面サイズに関する指示をコンポーネントに与える必要がありますが、[その他の属性](/ja/guides/integrations-guide/image/#picture-)はオプションです。
 
@@ -312,7 +312,7 @@ CDNネットワーク上の画像をとAstroで利用するには、画像の完
 
 代わりに、もしCDNがNode.js SDKを提供している場合はプロジェクトでSDKを利用できます。例えば、[CloudinaryのSDK](https://cloudinary.com/documentation/node_integration)は適切な`src`を利用して`<img>`タグを生成できます。
 
-Astroの画像インテグレーションで、[`<Image />`を用いた外部画像](#リモート画像)や[`<Picture />`](#リモート画像-1)コンポーネントを利用するには、リモート画像を扱うための適切なサイズとフォーマットを指定する必要があります。
+Astroの画像インテグレーションの[`<Image />`を用いた外部画像](#リモート画像)や[`<Picture />`](#リモート画像-1)コンポーネントを利用するには、リモート画像を扱うための適切なサイズとフォーマットを指定する必要があります。
 
 ## Altテキスト
 
