Fix japanese translation of [default value]

--- a/src/pages/ja/guides/images.mdx
+++ b/src/pages/ja/guides/images.mdx
@@ -132,7 +132,7 @@ Astroの[`<Image />`コンポーネント](/ja/guides/integrations-guide/image/#
 
 フロントマターで画像をインポートして、`<Image />`コンポーネントの`src`属性へ直接渡します。
 
-`alt`は必須ですが[その他の属性](/ja/guides/integrations-guide/image/#image-)はオプションで、指定が無ければ画像ファイルのプロパティが初期値として設定されます。
+`alt`は必須ですが[その他の属性](/ja/guides/integrations-guide/image/#image-)はオプションで、指定が無ければ画像ファイルのプロパティがデフォルト値として設定されます。
 
 #### リモート画像
 
