udpated project-structure file

--- a/src/pages/fr/core-concepts/project-structure.mdx
+++ b/src/pages/fr/core-concepts/project-structure.mdx
@@ -3,8 +3,9 @@ layout: ~/layouts/MainLayout.astro
 title: Structure du Projet
 description: Apprends à structurer un projet avec Astro.
 ---
+import FileTree from '~/components/FileTree.astro'
 
-Votre tout nouveau projet Astro généré à partir de l'assistant de création `create-astro` possède déjà quelques fichiers et dossiers. En ce qui concerne les autres fichiers, vous pourrez les créer vous-même et les ajouter à la structure de fichiers d'Astro.
+Votre tout nouveau projet Astro généré à partir de l'assistant de création `create astro` possède déjà quelques fichiers et dossiers. En ce qui concerne les autres fichiers, vous pourrez les créer vous-même et les ajouter à la structure de fichiers d'Astro.
 
 Voici comment un projet Astro est organisé, ainsi que quelques fichiers que vous trouverez dans votre nouveau projet.
 
