i18n(fr): import FileTree on routing.mdx

--- a/src/pages/fr/core-concepts/routing.mdx
+++ b/src/pages/fr/core-concepts/routing.mdx
@@ -3,6 +3,7 @@ layout: ~/layouts/MainLayout.astro
 title: Routage
 description: Une introduction à l'utilisation du routage avec Astro.
 ---
+import FileTree from '~/components/FileTree.astro'
 
 Astro utilise un **routage basé sur les fichiers** pour générer les URLs de votre dossier de compilation en fonction des dossiers de votre projet `src/pages/`. Lorsqu'un fichier est ajouté au dossier `src/pages/` de votre projet, une route avec le même nom que ce fichier est alors disponible automatiquement.
 
