--- a/src/pages/fr/core-concepts/sharing-state.mdx
+++ b/src/pages/fr/core-concepts/sharing-state.mdx
@@ -24,7 +24,7 @@ La librairie [Nano Stores](https://github.com/nanostores/nanostores) vous permet
 Pourtant, il existe un certain nombre d'alternatives que vous pouvez explorer. Ceux-ci incluent :
 - Les [Stores intégrés de Svelte](https://svelte.dev/tutorial/writable-stores)
 - [Les signaux de SolidJS](https://www.solidjs.com/docs/latest) en dehors du contexte d'un composant
-- [Gestion d'état de réactivité de Vue API](https://vuejs.org/guide/scaling-up/state-management.html#simple-state-management-with-reactivity-api)
+- [API de réactivité de Vue](https://vuejs.org/guide/scaling-up/state-management.html#simple-state-management-with-reactivity-api)
 - [L'envoi d'événements personnalisés du navigateur](https://developer.mozilla.org/fr/docs/Web/Events/Creating_and_triggering_events) entre les composants
 
 :::note[FAQ]
