Adding 'Navigation entre les pages' part

--- a/src/pages/fr/core-concepts/routing.mdx
+++ b/src/pages/fr/core-concepts/routing.mdx
@@ -21,8 +21,16 @@ src/pages/posts/1.md         -> monsite.com/posts/1
 ```
 
 :::tip
-Il n'y a pas de "configuration de routage" à maintenir dans un projet Astro. Les pages statiques sont créées en plaçant des fichiers dans le dossier `/src/pages/`.
+Il n'y a pas de "configuration de routage" séparée à maintenir dans un projet Astro ! Lorsque vous ajoutez un fichier dans le répertoire `/src/pages`, une nouvelle route est automatiquement créée pour vous. Dans les constructions statiques, vous pouvez personnaliser le format de sortie du fichier en utilisant l'option de configuration [`build.format`](/fr/référence/configuration-reference/#buildformat).
 :::
+
+## Navigation entre les pages
+
+Astro utilise la standarlisation HTML [`<a>` elements](https://developer.mozilla.org/fr-FR/docs/Web/HTML/Element/a) pour naviguer entre les routes. Il n'y a pas de composant `<Link>` spécifique au framework fourni.
+
+```astro title="src/pages/index.astro"
+<p>Lire d'avantage <a href="/about/">a propos</a> d'Astro!</p>
+```
 
 ## Routes Dynamiques
 
