i18n(fr): Updated core-concepts/sharing-state.mdx (#2491)
* Added Vue's reactivity API link

* Update src/pages/fr/core-concepts/sharing-state.mdx

Co-authored-by: Happydev <81974850+MoustaphaDev@users.noreply.github.com>

---------

Co-authored-by: Happydev <81974850+MoustaphaDev@users.noreply.github.com>

--- a/src/pages/fr/core-concepts/sharing-state.mdx
+++ b/src/pages/fr/core-concepts/sharing-state.mdx
@@ -8,7 +8,6 @@ import LoopingVideo from '~/components/LoopingVideo.astro'
 import JavascriptFlavorTabs from '~/components/tabs/JavascriptFlavorTabs.astro'
 
 
-
 Lors de la construction d'un site web Astro avec l'[architecture isolée / hydratation partielle](/fr/concepts/islands/), vous avez peut-être rencontré ce problème : **Je veux partager l'état entre mes composants.**
 
 Les frameworks d'interface utilisateur comme React ou Vue peuvent encourager l'utilisation de [fournisseurs de "contexte"](https://fr.reactjs.org/docs/context.html) pour que d'autres composants puissent les consommer. Mais lorsque vous [hydratez partiellement des composants](/fr/core-concepts/framework-components/#hydratation-des-composants-interactifs) dans Astro ou Markdown, vous ne pouvez pas utiliser ces enveloppes contextuelles.
@@ -25,6 +24,7 @@ La librairie [Nano Stores](https://github.com/nanostores/nanostores) vous permet
 Pourtant, il existe un certain nombre d'alternatives que vous pouvez explorer. Ceux-ci incluent :
 - Les [Stores intégrés de Svelte](https://svelte.dev/tutorial/writable-stores)
 - [Les signaux de SolidJS](https://www.solidjs.com/docs/latest) en dehors du contexte d'un composant
+- [API de réactivité de Vue](https://vuejs.org/guide/scaling-up/state-management.html#simple-state-management-with-reactivity-api)
 - [L'envoi d'événements personnalisés du navigateur](https://developer.mozilla.org/fr/docs/Web/Events/Creating_and_triggering_events) entre les composants
 
 :::note[FAQ]
