Err lien 'Guide TypeScript'
Co-authored-by: Happydev <81974850+MoustaphaDev@users.noreply.github.com>

--- a/src/pages/fr/core-concepts/project-structure.mdx
+++ b/src/pages/fr/core-concepts/project-structure.mdx
@@ -116,4 +116,4 @@ Allez voir la [documentation de configuration](/fr/reference/configuration-refer
 
 Ce fichier est généré dans chaque modèle de démarrage et comprend des options de configuration TypeScript pour votre projet Astro. Certaines fonctionnalités (comme les importations de paquets npm) ne sont pas entièrement prises en charge dans l'éditeur sans un fichier `tsconfig.json`.
 
-Voir le [Guide TypeScript](/en/guides/typescript/) pour plus de détails sur le paramétrage des configurations.
+Voir le [Guide TypeScript](/fr/guides/typescript/) pour plus de détails sur le paramétrage des configurations.
