i18n(fr): core-concepts/project-structure.mdx (#2489)
* udpated project-structure file

* 📝 Addind tsconfig.json part and FileTree

* Err lien 'Guide TypeScript'

Co-authored-by: Happydev <81974850+MoustaphaDev@users.noreply.github.com>

---------

Co-authored-by: Happydev <81974850+MoustaphaDev@users.noreply.github.com>

--- a/src/pages/fr/core-concepts/project-structure.mdx
+++ b/src/pages/fr/core-concepts/project-structure.mdx
@@ -3,8 +3,9 @@ layout: ~/layouts/MainLayout.astro
 title: Structure du Projet
 description: Apprends à structurer un projet avec Astro.
 ---
+import FileTree from '~/components/FileTree.astro'
 
-Votre tout nouveau projet Astro généré à partir de l'assistant de création `create-astro` possède déjà quelques fichiers et dossiers. En ce qui concerne les autres fichiers, vous pourrez les créer vous-même et les ajouter à la structure de fichiers d'Astro.
+Votre tout nouveau projet Astro généré à partir de l'assistant de création `create astro` possède déjà quelques fichiers et dossiers. En ce qui concerne les autres fichiers, vous pourrez les créer vous-même et les ajouter à la structure de fichiers d'Astro.
 
 Voici comment un projet Astro est organisé, ainsi que quelques fichiers que vous trouverez dans votre nouveau projet.
 
@@ -15,35 +16,36 @@ Astro promeut une certaine façon d'organiser vos dossiers dans votre projet. Ch
 - `src/*` - Le code source de votre projet (composants, pages, styles, etc...)
 - `public/*` - Tout ce qui n'est pas du code et/ou des fichiers qui n'ont pas à être traités (polices d'écritures, icônes, etc...)
 - `package.json` - Le manifeste de votre projet.
-- `astro.config.mjs` - Un fichier de configuration d'Astro (optionnel).
+- `astro.config.mjs` - Un fichier de configuration d'Astro (optionnel)
+- `tsconfig.json` - Un fichier de configuration TypeScript. (recommandé)
 
 ### Exemple de structure de projet
 
 Un projet Astro assez commun peut ressembler à ça :
 
-```
-├── src/
-│   ├── components/
-│   │   ├── Header.astro
-│   │   └-─ Button.jsx
-│   ├── layouts/
-│   │   └-─ PostLayout.astro
-│   └── pages/
-│   │   ├── posts/
-│   │   │   ├── post1.md
-│   │   │   ├── post2.md
-│   │   │   └── post3.md
-│   │   └── index.astro
-│   └── styles/
-│       └-─ global.css
-├── public/
-│   ├── robots.txt
-│   ├── favicon.svg
-│   └-─ social-image.png
-├── astro.config.mjs
-└── package.json
-
-```
+<FileTree>
+- public/
+  - robots.txt
+  - favicon.svg
+  - social-image.png
+- src/
+  - components/
+    - Header.astro
+    - Button.jsx
+  - layouts/
+    - PostLayout.astro
+  - pages/
+    - posts/
+      - post1.md
+      - post2.md
+      - post3.md
+    - index.astro
+  - styles/
+    - global.css
+- astro.config.mjs
+- package.json
+- tsconfig.json
+</FileTree>
 
 ### `src/`
 
@@ -100,6 +102,8 @@ En règle générale, tout CSS ou JavaScript que vous ajoutez devrait être mis 
 
 C'est un fichier utilisé par les gestionnaires de paquets JavaScript pour gérer vos dépendances. Il définit également les scripts qui sont utilisés pour exécuter Astro (ex: `npm start`, `npm run build`).
 
+Il existe [deux types de dépendances](https://docs.npmjs.com/specifying-dependencies-and-devdependencies-in-a-package-json-file) que vous pouvez spécifier dans un `package.json` : `dependencies` et `devDependencies`. Dans la plupart des cas, ils fonctionnent de la même manière : Astro a besoin de toutes les dépendances au moment de la construction, et votre gestionnaire de paquets les installera. Nous vous recommandons de mettre toutes vos dépendances dans `dependencies` pour commencer, et de n'utiliser `devDependencies` que si vous en éprouvez le besoin spécifique.
+
 Pour plus d'informations en ce qui concerne la création d'un nouveau fichier `package.json` pour votre projet, consultez les instructions de [configuration manuelle](/fr/install/manual/).
 
 ### `astro.config.mjs`
@@ -107,3 +111,9 @@ Pour plus d'informations en ce qui concerne la création d'un nouveau fichier `p
 Ce fichier est généré dans chaque modèle de démarrage et contient des options de configuration pour votre projet Astro. Ici, vous pouvez spécifier les intégrations à utiliser, les options de compilation, les options du serveur, et plus encore.
 
 Allez voir la [documentation de configuration](/fr/reference/configuration-reference/) pour plus d'informations sur les options de configuration.
+
+### `tsconfig.json`
+
+Ce fichier est généré dans chaque modèle de démarrage et comprend des options de configuration TypeScript pour votre projet Astro. Certaines fonctionnalités (comme les importations de paquets npm) ne sont pas entièrement prises en charge dans l'éditeur sans un fichier `tsconfig.json`.
+
+Voir le [Guide TypeScript](/fr/guides/typescript/) pour plus de détails sur le paramétrage des configurations.
